# gigaam-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
gigaam_mlx/: __init__.py  audio.py  convert.py  model.py  transcribe.py
hf/: README.md  config.json
